--- a/styles/ldraw-visualizer-0.0.1.css
+++ b/styles/ldraw-visualizer-0.0.1.css
@@ -1,1 +1,1 @@
-body{background:red}/*# sourceMappingURL=./styles/ldraw-visualizer-0.0.1.css.map */
+body{margin:0}canvas{width:100%;height:100%}/*# sourceMappingURL=./styles/ldraw-visualizer-0.0.1.css.map */
